Ready to review.

--- a/qa327_test/frontend/R2 (2).md
+++ b/qa327_test/frontend/R2 (2).md
@@ -49,7 +49,7 @@ Actions:
 - validate that current page contains  `#name`  element  
 -  validate that current page contains  `#password`  element
 - validate that current page contains  `#password2`  element  
-## [GET]
+## [POST]
 #### Test Case R2.4 - The registration form can be submitted as a POST request to the current URL (/register)
 Mocking:  
   
